@@ -1,3 +1,10 @@
+Wed Jun 04 14:10:59 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/indexerconnection.py,xappy/unittests/db_type_compat1.py:
+	  If a database exists, but isn't a flint database, catch the
+	  DatabaseOpeningError and try to open it anyway.  Add test for
+	  this behaviour.
+
 Wed Jun 04 14:08:33 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/unittests/testdata/chert_db/,
